FIX: Corrected font size and overflow at the bottom of the page

--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ a:hover::before {
 }
 
 .box p.footer {
-    font-size: 3.5vw;
+    font-size: clamp(1rem, -0.875rem + 8.333vw, 3.5rem);
     margin-top: .5em;
     margin-bottom: 0;
     text-transform: none;
@@ -277,7 +277,7 @@ a:hover::before {
     font-size: 1.5em;
     line-height: 1em;
     font-weight: 200;
-    padding: 0 5vw 5vw;
+    padding: 0 5vw 5vw 1vw;
     border-right: 0;
     border-left: 2px;
     border-style: solid;
